1997-06-12  Miles Bader  <miles@gnu.ai.mit.edu>

	* fshelp.h (fshelp_touch): New function.
	(TOUCH_ATIME, TOUCH_MTIME, TOUCH_CTIME): New macros.
	Include <maptime.h>.
	
1997-06-11  Miles Bader  <miles@gnu.ai.mit.edu>

	* fshelp.h (fshelp_fetch_root_callback1_t): Chage ARGZ_LEN to type
	size_t.

Fri Nov 15 14:43:44 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* fshelp.h (fshelp_access): Uh, shift bits the right direction.

Tue Nov 12 22:07:41 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* fetch-root.c (fshelp_fetch_root): Name idvec members correctly. 
	
	* fshelp.h: <iohelp.h> -> <hurd/iohelp.h>.
	Include <sys/stat.h>.
	(fshelp_access): Declare `gotit'.
	
Wed Nov  6 17:49:33 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* fshelp.h (fshelp_fetch_root): Delete args `uids', `gids',
 	`uids_len', and `gids_len'.  New arg `user'.
	* fetch-root.c (fshelp_fetch_root): Ditto.

	* fshelp.h: Include <iohelp.h>.
	(fshelp_access, fshelp_isowner, fshelp_checkdirmod): New
 	functions.

Mon Oct 21 21:55:21 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* fshelp.h: Add extern inline protection.
	* fshelp.c: New file.
	* Makefile (SRCS): Add fshelp.c.

Sun Oct 13 21:46:18 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* lock-acquire.c (fshelp_acquire_lock): Return success, not EBADF,
 	when unlocking a file which we don't have locked; this is netbsd's
 	behavior.

Thu Oct 10 17:12:19 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* lock-acquire.c (fshelp_acquire_lock): Use hurd_condition_wait so
	we are properly interruptible.

Thu Sep 12 16:21:51 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(libfshelp.so): Delete special dependency.

Tue Jul 16 11:30:42 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* lock-acquire.c (EWOULDBLOCK): Define, to work around new libc
 	bug.

Sun Jul  7 21:26:02 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>
